--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.container{
+    background-image: url('/images/bg.jpg');
+}
+
 .poppins-thin {
     font-family: "Poppins", sans-serif;
     font-weight: 100;
