benerin bg kelima kalinya

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 body{
-    background-image: url('/images/bg.webp');
+    background-image: url('/images/bg1.webp');
     background-size: cover;
+}
+
+.container{
+    height: 100vmax;
 }
 
 .poppins-thin {
