ubah bg kesepuluh kalinya

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
-/* body{
+body{
     background-image: url('/images/bg1.webp');
-    background-size: cover;
-} */
+}
 
 .container{
     height: 100vmax;
